ChangeLog for varconf
Friday, 13th June, 2003, Al Riddoch <alriddoch@zepler.org>
	* Remove support for sigc++ 1.2 from this legacy version. This version
	  is now the recommended version for use with application which
	  require sigc++ 1.0. Application which require sigc++ 1.2 should
	  use the 0.6 series or later.

Friday, 17th April, 2003, Al Riddoch <alriddoch@zepler.org>
	* Fix up headers for clean handling, and portability.

Friday, 30th January, 2003, Al Riddoch <alriddoch@zepler.org>
	* Added mechanism to differentiate between varconf built
	  against sigc++ 1.0 and 1.2, and use pkg-config to
	  detect the 1.2 version.

Friday, 13th December, 2002, Michael Koch <konqueror@gmx.de>
	* Added manpage for varconf-config.

Monday, 2nd September, 2002, Al Riddoch <alriddoch@zepler.org>
	* Increment version to 0.5.4
	* Release 0.5.4

Sunday, 11th August, 2002, Ron Steinke <rsteinke@w-link.net>
	* Fixed Variable's copy constructor to work properly
	  with the changes in the ref counting code

Sunday, 11th August, 2002, Al Riddoch <alriddoch@zepler.org>
	* Integrated patch by Ron Steinke to remove dependancy on
	  sigc++ 1.0.x internals. Modified configure script and includes
	  to be compatable with sigc++ 1.2.

Tuesday, 6th August, 2002, Simon Goodall <simon@simongoodall.co.uk>
	* fixed varconf/config.cpp so parseStream now allows - and _ characters in a section name instead of throwing an exception.

Saturday, 20th June, 2002, Al Riddoch <alriddoch@zepler.org>
	* Add --enable-debug to configure.in
	* Use rpm supplied compiler flags in spec.
	* Increment version, and release

Saturday, 20th June, 2002, Michael Koch <konqueror@gmx.de>
	* Depend on sigc++ >= 1.0.2
	* cleaned up Makefile.am

Monday, 10th June, 2002, Al Riddoch <alriddoch@zepler.org>
	* Fixed rpm spec into two different packages, and corrected generation
	  of interface version.

Wednesday, May 21 2002, Michael Koch (man-di)
	* tests/Makefile.am: make tests link
	